src/parse/snapshots/protox__parse__tests__parse_message-8.snap
---
source: src/parse/tests.rs
expression: parser.parse_message()
---
Ok(
    Message {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        body: MessageBody {
            items: [],
            extensions: [
                Extensions {
                    ranges: [
                        ReservedRange {
                            start: Int {
                                negative: false,
                                value: 5,
                                span: 25..26,
                            },
                            end: None,
                        },
                        ReservedRange {
                            start: Int {
                                negative: false,
                                value: 7,
                                span: 28..29,
                            },
                            end: Int(
                                Int {
                                    negative: false,
                                    value: 8,
                                    span: 33..34,
                                },
                            ),
                        },
                        ReservedRange {
                            start: Int {
                                negative: false,
                                value: 10,
                                span: 36..38,
                            },
                            end: Max,
                        },
                    ],
                    options: [
                        OptionBody {
                            name: FullIdent {
                                parts: [
                                    Ident {
                                        value: "deprecated",
                                        span: 47..57,
                                    },
                                ],
                            },
                            field_name: None,
                            value: Bool(
                                Bool {
                                    value: false,
                                    span: 60..65,
                                },
                            ),
                        },
                    ],
                    comments: Comments {
                        leading_detached_comments: [],
                        leading_comment: None,
                        trailing_comment: None,
                    },
                    span: 14..67,
                },
            ],
            options: [],
            reserved: [],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..69,
    },
)
