src/parse/snapshots/protox__parse__tests__parse_oneof-2.snap
---
source: src/parse/tests.rs
expression: parser.parse_oneof()
---
Ok(
    Oneof {
        name: Ident {
            value: "Foo",
            span: 6..9,
        },
        options: [],
        fields: [],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..17,
    },
)
