src/parse/snapshots/protox__parse__tests__parse_oneof-3.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_oneof() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Oneof {
        name: Ident {
            value: "Foo",
            span: 42..45,
        },
        options: [],
        fields: [],
        comments: Comments {
            leading_detached_comments: [
                "detached1",
                "detached2\n",
            ],
            leading_comment: Some(
                "leading\n",
            ),
            trailing_comment: None,
        },
        span: 36..68,
    },
)
