src/parse/snapshots/protox__parse__tests__parse_oneof-4.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_oneof() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Oneof {
        name: Ident {
            value: "Foo",
            span: 6..9,
        },
        options: [],
        fields: [
            Field {
                label: None,
                name: Ident {
                    value: "bar",
                    span: 18..21,
                },
                kind: Normal {
                    ty: Int32,
                    ty_span: 12..17,
                },
                number: Int {
                    negative: false,
                    value: 1,
                    span: 24..25,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 12..26,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..28,
    },
)
